--- a/TODO
+++ b/TODO
@@ -2,17 +2,11 @@ CURRENT DOCUMENTATION: TODO
 
 Preamble: The following will have external coordinated changes in
 Rosetta::Validator so that they can be tested and, where needed, Rosetta and
-SQL::Routine also.  The SQL-2003 standard will continue to be used for
+SQL::Routine also.  The SQL:2003 standard will continue to be used for
 primary guidance.  Free database products that run under Mac OS X 10.2+ and
 have a well-maintained DBD module will get the early priority simply because I
 can easily download and install them on my computer.  Other databases will get
 supported when I can get access to them, or someone else does it for me.
-
-r0.10 - Compatability update to go along with the upcoming SQL::Routine 0.44,
-where 'commands' are no longer separate entities, but embedded in 'routines';
-working with this will require a partial design change in Generic.pm.  Update
-SQLBuilder.pm to account for that some, and deal with standard functions or
-procedures taking named arguments rather than positional ones.
 
 r0.11 - Start off the Rosetta::Utility::SQLParser module.  Update Generic.pm
 and the two Utility modules to finish implementing these commands: SCHEMA_LIST,
@@ -22,30 +16,28 @@ TABLE_INFO, TABLE_VERIFY, TABLE_CREATE, TABLE_DELETE.  Test that they work
 against SQLite and MySQL.  In other words, make sure that table creation,
 removal, and reverse-engineering for tables works with SQLite and MySQL.  At
 this moment, reverse-engineering will be done manually since it's simple.  If
-possible, do this using: Perl 5.8.5, DBI 1.43, SQLite 3.0.7+, MySQL 4.1.5+. 
-Once that's done, announce Rosetta/SQL::Routine Developer Release #2.
+possible, do this using: Perl 5.8.5, DBI 1.43, SQLite 3.0.8+, MySQL 4.1.7+.
+Once that's done, announce Rosetta/SQL::Routine Developer Release #2.  Make
+application-side standard routines work, so that the standard selects and DML
+are possible.
 
-r0.12 - Make application-side standard routines work, so that the standard
-selects and DML are possible.  Use same dependencies as above.
-
-r0.13 - Make the stuff developed previously work with SQLite 2.8.15+ and MySQL
+r0.12 - Make the stuff developed previously work with SQLite 2.8.15+ and MySQL
 3.23.x, adding features emulation for sub-selects and compound selects (using
 temp tables and joins).  Test both named and positional host params.  Once 
 that's done, announce Rosetta/SQL::Routine Developer Release #3.
 
-r0.14 - Make the previous stuff work with a recent PostgreSQL version, either
+r0.13 - Make the previous stuff work with a recent PostgreSQL version, either
 7.4 or 8.0.  Finish implementing server-side view and routine creation and
 removal, since we now have a database engine that supports those features.  At
 this moment, SQL tokenizing will probably be handled by a new dependency, such
 as Parse::RecDescent, as it is a lot more complicated.  Once that's done,
 announce Rosetta/SQL::Routine Developer Release #4.
 
-r0.15 - Start working on the schema-to-schema or db-to-db cloning features, and
+r0.14 - Start working on the schema-to-schema or db-to-db cloning features, and
 the insert-cursor features.
 
-* Update the list of 'standard functions' and 'standard procedures' in
-SQLBuilder (and SQL::Routine) to more closely reflect the SQL-2003
-standard, fill other gaps.
+* Update the list of 'standard routines' in SQLBuilder (and SQL::Routine) to
+more closely reflect the SQL:2003 standard, fill other gaps.
 
 * Start the Rosetta::Emulator::DBI module and try to get it working on
 something simple, like connecting to a database and selecting records.  Maybe
