--- a/lib/Rosetta/Extensions.pod
+++ b/lib/Rosetta/Extensions.pod
@@ -8,11 +8,12 @@ This documentation file is a small place-holder to represent the
 "Rosetta-Extensions" distribution on CPAN; its NAME would get used by CPAN as
 the brief descriptive blurb for this distribution among a list of
 distributions.  You should continue by reading the documentation in
-Rosetta::Engine::Generic and Rosetta::Utility::SQLBuilder, which are the most
-complete modules at this time.
+Rosetta::Engine::Generic, Rosetta::Utility::SQLBuilder, and
+Rosetta::Utility::SQLParser, which are the most complete modules at this time.
 
 =head1 SEE ALSO
 
-Rosetta, SQL::Routine, and various other modules mentioned in their SEE ALSO.
+Rosetta, SQL::Routine, Locale::KeyedText, DBI, and various other modules
+mentioned in their SEE ALSO.
 
 =cut
