--- a/ReadMe
+++ b/ReadMe
@@ -45,8 +45,8 @@ Standard Modules: none
 
 Nonstandard Modules: 
 
-	Rosetta 0.37
-	SQL::Routine 0.46 (This explicit dependency is for Rosetta-Extensions-0.11 only.)	DBI 1.43
+	Rosetta 0.38
+	DBI 1.45
 	various DBI Driver (DBD) modules
 
 SUPPORT
