--- a/TODO
+++ b/TODO
@@ -8,32 +8,40 @@ have a well-maintained DBD module will get the early priority simply because I
 can easily download and install them on my computer.  Other databases will get
 supported when I can get access to them, or someone else does it for me.
 
-r0.12 - Start off the Rosetta::Utility::SQLParser module.  Update Generic.pm
-and the two Utility modules to finish implementing these commands: SCHEMA_LIST,
-SCHEMA_INFO, SCHEMA_VERIFY, SCHEMA_CREATE, SCHEMA_DELETE, DOMAIN_LIST,
-DOMAIN_INFO, DOMAIN_VERIFY, DOMAIN_CREATE, DOMAIN_DELETE, TABLE_LIST,
-TABLE_INFO, TABLE_VERIFY, TABLE_CREATE, TABLE_DELETE.  Test that they work
-against SQLite and MySQL.  In other words, make sure that table creation,
-removal, and reverse-engineering for tables works with SQLite and MySQL.  At
-this moment, reverse-engineering will be done manually since it's simple.  If
-possible, do this using: Perl 5.8.5, DBI 1.45, SQLite 3.0.8+, MySQL 4.1.7+.
-Once that's done, announce Rosetta/SQL::Routine Developer Release #2.  Make
-application-side standard routines work, so that the standard selects and DML
-are possible.
+r0.14 - Add the necessary functionality to support the creation of tables and
+performance of inserts and trivial selects against tables on a SQLite 3.0.8+
+database.  At the same time, a trivial genealogy application demo will be
+released with 'Rosetta' that makes use of this and shows it to be working. 
+Once that's done, announce Rosetta/SQL::Routine Developer Release #2.
 
-r0.13 - Make the stuff developed previously work with SQLite 2.8.15+ and MySQL
-3.23.x, adding features emulation for sub-selects and compound selects (using
-temp tables and joins).  Test both named and positional host params.  Once 
-that's done, announce Rosetta/SQL::Routine Developer Release #3.
+r0.15 - Add support for the same activities, plus all pre-existing abilities,
+against SQLite 2.8.15+ and multiple MySQL versions (5.0.2, 4.1.7, 4.0.22,
+3.23.58).  Also add support for talking to multiple versions of the same
+database at once, and for properly auto-detecting SQLite databases.  Also set
+things up so that CATALOG_OPEN will *not* create a new SQLite database if it
+doesn't exist (behave like other dbs).
 
-r0.14 - Make the previous stuff work with a recent PostgreSQL version, either
-7.4 or 8.0.  Finish implementing server-side view and routine creation and
-removal, since we now have a database engine that supports those features.  At
-this moment, SQL tokenizing will probably be handled by a new dependency, such
-as Parse::RecDescent, as it is a lot more complicated.  Once that's done,
+r0.16 - Start off the Rosetta::Utility::SQLParser module.  Add support to the
+module set for reverse-engineering tables from all database types.  For this
+release, do reverse-engineering manually, since its simple.  Once that's done,
+announce Rosetta/SQL::Routine Developer Release #3.
+
+r0.17 - Make the previous stuff work with PostgreSQL 8.0, and possibly 7.4 also.  
+
+r0.18 - Add support for updates and deletes against tables.  Once that's done,
 announce Rosetta/SQL::Routine Developer Release #4.
 
-r0.15 - Start working on the schema-to-schema or db-to-db cloning features, and
+r0.19 - Make non-trivial selects work with all database types.  For some
+engines such as MySQL 3.23 and 4.0, this will require some emulation.  Once
+that's done, announce Rosetta/SQL::Routine Developer Release #5.
+
+r0.20 - Start testing generation and reverse-engineering of more complicated
+database schema objects like views and routines.  From now on, SQL tokenizing
+will probably be handled by a new dependency, such as Parse::RecDescent, as it
+is a lot more complicated.  Once that's done, announce Rosetta/SQL::Routine
+Developer Release #6.
+
+* Start working on the schema-to-schema or db-to-db cloning features, and
 the insert-cursor features.
 
 * Update the list of 'standard routines' in SQLBuilder (and SQL::Routine) to
