--- a/lib/Rosetta/Extensions.pod
+++ b/lib/Rosetta/Extensions.pod
@@ -1,3 +1,5 @@
+=encoding utf8
+
 =head1 NAME
 
 Rosetta::Extensions - Reference implementations of fundamental Rosetta features
@@ -13,7 +15,7 @@ Rosetta::Utility::SQLParser, which are the most complete modules at this time.
 
 =head1 SEE ALSO
 
-Rosetta, SQL::Routine, Locale::KeyedText, DBI, and various other modules
-mentioned in their SEE ALSO.
+L<Rosetta>, L<SQL::Routine>, L<Locale::KeyedText>, L<DBI>, and various other
+modules mentioned in their SEE ALSO.
 
 =cut
